--- a/src/components/styles/WhatIDo.css
+++ b/src/components/styles/WhatIDo.css
@@ -24,7 +24,7 @@
   font-size: calc(2.6vw + 18px);
   line-height: calc(2.6vw + 16px);
   font-weight: 600;
-  margin-right: 10%;
+  margin-right: 28%;
   margin-bottom: 100px;
 }
 
@@ -272,13 +272,13 @@
 
 @media only screen and (max-width: 1600px) {
   .what-box h2 {
-    margin-right: 18%;
+    margin-right: 32%;
   }
 }
 
 @media only screen and (max-width: 1400px) {
   .what-box h2 {
-    margin-right: 20%;
+    margin-right: 34%;
   }
 
   .what-box-in {
